# grok-build-desktop

./: README.md  README_zh-CN.md
apps/desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: agent_path.rs  config_models.rs  lib.rs  secrets.rs  trust.rs
apps/desktop/src-tauri/src/acp/: client.rs  framing.rs  mod.rs
apps/desktop/src-tauri/tests/: acp_roundtrip.rs  multi_session.rs  ux_core.rs
apps/desktop/src/lib/: api.test.ts  api.ts
docs/: DESKTOP_DEV.md  UPSTREAM_SYNC.md
